<resources>
    <string name="app_name">Asoguau</string>

    <string name="action_settings">Configuración</string>
    <string name="action_search">Buscar</string>
    <string name="action_carrito">Añadir al carrito</string>

    <!-- Opcioones del Drawer -->
    <string name="item_Asoguau">Asoguao</string>
    <string name="item_Miasoguau">Mi Cuenta</string>
    <string name="item_Asored">Asored</string>
    <string name="item_configuracion">Configuracio
        n</string>

    <string name="titulo_noticias_recientes">Noticias Recientes</string>

    <!-- Tabs Cuenta -->
    <string name="titulo_tab_perfil">PERFIL</string>
    <string name="titulo_tab_noticias">NOTICIAS</string>
    <string name="titulo_tab_donacion">DONACIONES</string>

    <!-- Tabs Peliculas -->
    <string name="titulo_tab_peliculas_todas">TODAS</string>
    <string name="titulo_tab_peliculas_recientes">RECIENTES</string>

    <string name="titulo_tab_asored_todas">TODAS</string>
    <string name="titulo_tab_asored_recientes">RECIENTES</string>

    <string name="nro_servicio_tecnico">Llamanos 0-500-CINE-00</string>

    <string name="nombre_usuario_default">Administrador</string>

    <string name="texto_cambiar_contrasena">Cambia tu contraseña</string>
    <string name="etiqueta_contrasena">Contraseña</string>
    <string name="datos_personales">Datos Personales</string>

    <string-array name="Horario">
        <item>Carabobo - Sambil - 4:00pm - 6:00pm</item>
        <item>Carabobo - La Granja - 4:00pm - 6:00pm</item>
        <item>Caracas - Sambil - 4:00pm - 6:00pm</item>
    </string-array>

    <string name="hello_world">Hello world!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="girl_ipsum">girl_ipsum</string>
    <string name="title_activity_login">Login</string>
    <string name="correo_login">Escribe tu Correo</string>
    <string name="clave_login">Escribe tu Clave</string>
    <string name="title_activity_registro">Registro</string>
    <string name="etiqueta_info_cuenta">Informacion de la Cuenta</string>
    <string name="title_activity_procesar_compra">Procesar Compra</string>
    <string name="share_menu_title">Compartir</string>


    <!-- String Facebook -->
    <string name="facebook_app_name">HelloFBSample</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Post ID: %1$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected">&lt;No friends selected&gt;</string>
    <string name="no_place_selected">&lt;No place selected&gt;</string>
    <string name="pick_seattle_place">Pick a Seattle Place</string>
    <string name="app_id">355198514515820</string>
    <string name="exception">Exception: %1$s</string>
    <string name="title_activity_prueba">prueba</string>
    <string name="action_save">Guardar</string>
    <string name="title_activity_agregar_noticia">AgregarNoticia</string>
    <string name="action_send">Enviar</string>
    <string name="search_hint">Buscar...</string>
    <string name="info_text_donacion">Bienvenido a la donacion Asoguau</string>
    <string name="donar_boton">Donar</string>
    <string name="monto_hint">Monto</string>
    <string name="salir_boton">Salir</string>
    <string name="text_registro_login">¿No estas Registrado en Asoguau?</string>

</resources>