<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_inicio"
            android:checked="true"
            android:icon="@drawable/patita2"
            android:title="@string/item_Asoguau" />
        <item
            android:id="@+id/item_cuenta"
            android:icon="@drawable/news1"
            android:title="@string/item_Miasoguau" />
        <item
            android:id="@+id/item_categorias"
            android:icon="@drawable/red"
            android:title="@string/item_Asored" />

        <item
            android:id="@+id/item_ajustes"
            android:icon="@drawable/config"
            android:title="Ajustes" />

        <item
            android:id="@+id/item_ayuda"
            android:icon="@drawable/ayuda"
            android:title="Ayuda" />


        <item
            android:id="@+id/item_Salir"
            android:icon="@drawable/off"
            android:title="Salir" />


    </group>


</menu>